--- a/src/main/resources/static/static/css/style.css
+++ b/src/main/resources/static/static/css/style.css
@@ -13,3 +13,15 @@ footer {
     width: 100%;
     overflow: hidden;
 }
+
+.etwig-main{
+	width: 95%;
+	margin-left: auto;
+  	margin-right: auto;
+}
+
+.navbar-brand img {
+  height: 30px;
+  float: left;
+  margin-right: 10px;
+}
