Filter box for calendar

--- a/src/main/resources/static/static/css/public.css
+++ b/src/main/resources/static/static/css/public.css
@@ -5,3 +5,13 @@
 .bg-etwig-blue {
     background-color: #004aadff !important;
 }
+
+.form-control:focus{
+	border-color: #004aad !important;  
+	box-shadow: none; 
+	-webkit-box-shadow: none;
+} 
+
+.border-public {
+    border-color: #004aad !important;
+}
