Better Filter page

--- a/src/main/resources/static/static/css/public.css
+++ b/src/main/resources/static/static/css/public.css
@@ -6,12 +6,18 @@
     background-color: #004aadff !important;
 }
 
+/*
 .form-control:focus{
 	border-color: #004aad !important;  
 	box-shadow: none; 
 	-webkit-box-shadow: none;
 } 
+*/
 
 .border-public {
     border-color: #004aad !important;
+}
+
+.header-text{
+	color: #004aad;
 }
