--- a/src/main/resources/static/static/css/style.css
+++ b/src/main/resources/static/static/css/style.css
@@ -17,14 +17,14 @@ footer {
 .etwig-box{
 	padding-left: 1em;
   	padding-right: 1em;
-  	padding-top: 1em;
-  	padding-bottom: 1em;
 }
 
 .etwig-main{
 	width: 95%;
 	margin-left: auto;
   	margin-right: auto;
+  	padding-top: 1em;
+  	padding-bottom: 1em
 }
 
 .navbar-brand img {
@@ -38,3 +38,6 @@ footer {
   margin-right: 0!important;
 }
 
+.bold{
+	font-weight: bold;
+}
