--- a/src/main/resources/static/static/css/style.css
+++ b/src/main/resources/static/static/css/style.css
@@ -1,70 +1,15 @@
-body {
-  background-color: white;
-}
-
-footer {
-	font-weight: bolder;
-    background-color: black;
-    color: white;
-    position: fixed; 
-    left: 0;
-    bottom: 0;
-    height: 20px;
-    width: 100%;
-}
-
-.etwig-box{
-	padding-left: 1em;
-  	padding-right: 1em;
-}
-
-.etwig-main{
-	width: 95%;
-	margin-left: auto;
-  	margin-right: auto;
-  	padding-top: 1em;
-  	padding-bottom: 1em
-}
-
-.navbar-brand img {
-  height: 30px;
-  float: left;
-  margin-right: 10px;
-}
-
-.container {
-  margin-left: 0!important;
-  margin-right: 0!important;
-}
-
-.bold{
+.bold-text{
 	font-weight: bold;
 }
 
+/* Make the warning button darker. */
 .btn-outline-warning{
-	color: darkorange;
-	border-color: darkorange;
+	color: darkorange!important;
+	border-color: darkorange!important;
+	background-color: #FFFFFF!important;
 }
 
 .btn-outline-warning:active, .btn-outline-warning:focus, .btn-outline-warning:hover {
-  color: #FFFFFF;
+  color: #FFFFFF!important;
   background-color: darkorange!important;
 }
-
-.bg-etwig-blue {
-    background-color: #004aadff !important;
-}
-
-.border-public {
-    border-color: #004aad !important;
-}
-
-.header-text{
-	color: #004aad;
-}
-
-/*
-input[type="submit"] {
-    font-family: FontAwesome;
-}
-*/
