--- a/src/main/resources/static/static/css/style.css
+++ b/src/main/resources/static/static/css/style.css
@@ -14,3 +14,9 @@
   color: #FFFFFF!important;
   background-color: darkorange!important;
 }
+
+/*
+.main-sidebar { 
+	background-color: #004AAD !important 
+}
+*/
