Edit Event Starter Page

--- a/src/main/resources/static/static/css/style.css
+++ b/src/main/resources/static/static/css/style.css
@@ -2,6 +2,10 @@
 	font-weight: bold;
 }
 
+.theme-color-text{
+	color: #004aad!important;
+}
+
 /* Make the warning button darker. */
 
 .btn-outline-warning{
@@ -15,21 +19,10 @@
   background-color: darkorange!important;
 }
 
-/*
-.main-sidebar { 
-	background-color: #004AAD !important 
-}
-*/
-
-.etwig-calendar{
-	margin-left: 1em;
-  	margin-right: 1em;
-  	padding-top: 1em;
-  	padding-bottom: 1em
+.callout.callout-primary {
+  border-left-color: #004aad;
 }
 
-/* Override the primary color */
-.sidebar-dark-primary .nav-sidebar>.nav-item>.nav-link.active,.sidebar-light-primary .nav-sidebar>.nav-item>.nav-link.active {
-  background-color:#004AAD!important;
-  color:#fff
+.dark-mode .callout.callout-primary {
+  border-left-color: #004aad;
 }
