--- a/src/main/resources/static/static/css/style.css
+++ b/src/main/resources/static/static/css/style.css
@@ -31,3 +31,8 @@
 .dark-mode .callout.callout-primary {
   border-left-color: #004aad;
 }
+
+.select2-results__option--highlighted,.select2-container--bootstrap4 .select2-results__option--highlighted.select2-results__option[aria-selected="true"]{
+	color:#fff;
+	background-color:#CCCCCC!important;
+}
