Delete event with permission control

--- a/src/main/resources/static/static/css/pace-theme-loading-bar.css
+++ b/src/main/resources/static/static/css/pace-theme-loading-bar.css
@@ -2,9 +2,9 @@
  * eTWIG - The event and banner management software for residential halls and student unions.
  * @copyright: Copyright (c) 2024 Steven Webb, eTWIG developers [etwig@grinecraft.net]
  * @license: MIT
- * @author: Steven Webb [xiaoancloud@outlook.com] I am NOT the author of this pace style, see @credit.
+ * @author: Steven Webb [xiaoancloud@outlook.com] I am NOT the author of this pace.js style, see @credit.
  * @website: https://etwig.grinecraft.net
- * @function: Pace flashing theme for all pages. (exclude the public TWIG content)
+ * @function: Pace loading bar theme for the public TWIG content.
  * @credit: Gavin https://github.com/gavJackson
  */
 
