properties - front end

--- a/src/main/resources/static/static/css/etwig-style.css
+++ b/src/main/resources/static/static/css/etwig-style.css
@@ -1,6 +1,6 @@
 /**
- * eTWIG - The event and banner management software for residential halls and student unions.
- * @copyright: Copyright (c) 2024 Steven Webb, eTWIG developers [etwig@grinecraft.net]
+ * eTWIG - The event management software for university communities.
+ * @copyright: Copyright (c) 2024 Steven Webb
  * @license: MIT
  * @author: Steven Webb [xiaoancloud@outlook.com]
  * @website: https://etwig.grinecraft.net
@@ -53,4 +53,14 @@
 
 .right-div{
 	float:right;
+}
+
+/* 
+	Used in some super-large Font-Awesome icons.
+	e.g., In the event list, if there has no event, a such icon with text "No events" will be displayed.
+*/
+
+.big-icons{
+	font-size: 10em;
+	color: #BFBFBF;
 }
