twig template design, refactored by using dto

--- a/src/main/resources/static/static/css/etwig-style.css
+++ b/src/main/resources/static/static/css/etwig-style.css
@@ -80,3 +80,9 @@
   pointer-events: none;
   cursor: default;
 }
+
+.button-container {
+	display: flex;
+    justify-content: space-between;
+    padding: 0px;
+}
