--- a/src/main/resources/static/static/css/etwig-style.css
+++ b/src/main/resources/static/static/css/etwig-style.css
@@ -125,3 +125,10 @@
   bottom: 0;
   border-bottom: 3px solid #004AAD;  
 }
+
+.fullscreen-iframe{
+  border: none;
+   
+    width: 100%;
+    height: 100%;
+}
