--- a/src/main/resources/static/static/css/twig.css
+++ b/src/main/resources/static/static/css/twig.css
@@ -61,7 +61,7 @@ body {
 	top: 50%;
 	left: 60%;
 	transform: translate(-50%, -50%);
-	display: none; /* Hide initially */
+	 /* display: none; Hide initially */
 }
 
 @keyframes beat {
