event graphics (final)

--- a/src/main/resources/static/static/css/etwig-style.css
+++ b/src/main/resources/static/static/css/etwig-style.css
@@ -147,3 +147,10 @@
 .ec-today {
     background-color: #004AAD1F !important;
 }
+
+.table-img{
+    max-height: 400px;
+    max-width: 400px;
+    height: auto;
+    width: auto;
+}
