--- a/src/main/resources/static/static/css/etwig-style.css
+++ b/src/main/resources/static/static/css/etwig-style.css
@@ -98,6 +98,11 @@ body {
 	color: #BFBFBF;
 }
 
+.medium-icons{
+	font-size: 5em;
+	color: #BFBFBF;
+}
+
 .disabled-link {
   pointer-events: none;
   cursor: default;
