--- a/src/main/resources/static/static/css/etwig-style.css
+++ b/src/main/resources/static/static/css/etwig-style.css
@@ -169,3 +169,19 @@ body {
     height: auto;
     width: auto;
 }
+
+.menu-option {
+  height: 256px;
+  background-color: #f8f9fa; /* Light grey background */
+  border: 1px solid #dee2e6; /* Border color */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 4px; /* Space between rows */
+}
+
+/* Ensure that the text or content in the menu option is centered */
+.menu-text {
+  text-align: center;
+  font-size: 20px; /* Larger text */
+}
